Fix portrait layout issues

--- a/public/css/text-portrait.css
+++ b/public/css/text-portrait.css
@@ -9,6 +9,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
     height: 100vh;
     overflow: hidden;
     margin: 0;
@@ -19,8 +20,12 @@
     font-weight: 500;
     font-family: system-ui;
     line-height: 12px;
+    word-break: break-all;
+    max-height: 100%;
+    max-width: 100%;
     background-position: center;
     background-repeat: no-repeat;
+    background-size: contain;
     -webkit-background-clip: text;
     -webkit-text-fill-color: rgba(255, 255, 255, 0);
 }
